# ComputerClub

./: .gitignore  CMakeLists.txt  README.md
input/: input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt
src/: CMakeLists.txt  main.cpp
src/client_events/: CMakeLists.txt  client_events.cpp
src/client_events/include/: client_events.hpp
src/computer_club/: CMakeLists.txt  computer_club.cpp
src/computer_club/include/: computer_club.hpp
src/parse/: CMakeLists.txt  parse.cpp
src/parse/include/: parse.hpp
src/validate/: CMakeLists.txt  validate.cpp
src/validate/include/: validate.hpp
